# SENSS

./: README.md  notes
BLAG/: README.md  accuracy.py  blacklist_support.py  download.py  generate_accuracy_scores.py  generate_contribution_false_positives_data.py  generate_prefix_data.py  new_matrix.py  run.py  run_recommender.py  selective_generate_prefix_data.py  selective_run.py
Client/: api.php  client.php  client_alpha.php  db_conf.php  ddos_with_sig.php  ddos_without_sig.php  digest.py  direct_floods.py  direct_floods_multiple_view.php  send_dhs.py
Client/AMON-SENSS/: AMONSENSS.sql  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  as  as.cc  asc  config.h  config.h.in  config.status  configure  configure.ac  digest_alerts.py  services.txt  utils.cc  utils.h
Client/AMON-SENSS/.deps/: as.Po  utils.Po
Client/AMON-SENSS/autom4te.cache/: output.0  requests  traces.0  traces.1
Client/Client/: routing_table
Client/backup/: api.php  recv_dhs.py
Client/cert/: amc_cert.pem  node1cert.pem
Client/cytoscape-dagre/: package.json
Client/exps/: amon_senss.php  api.php  client.php  ddos_with_sig.php  logs.php  (+3 more)
Detector/: README
Proxy/: api.php  client_auth.php  constants.php  db_conf.php  proxy.php
SENSS/: setup_all.py
Server/: api.php  client_auth.php  constants.php  db.php  filter.php  get_server_logs.php  monitor.php  monitor_flows.py  server.php  threshold.php  utils.php
Setup/: as.config  init.py  insert_senss_client.py  insert_topo.py  install_dependencies.sh  monitor.py  nodes  nodes_ddos_with_sig  setup.py  setup_all.py  test.py
(+55 files in other folders)
